--- a/mapmarker.css
+++ b/mapmarker.css
@@ -31,12 +31,12 @@
   width: 100%;
   height: 100%;
   background: #1F8DE4;
-  perspective: 1000px;
-  perspective-origin: left;
+  /* perspective: 1000px; */
+  /* perspective-origin: left; */
 }
-* .frame .center #flipped {
+/* * .frame .center #flipped {
   display: none;
-}
+} */
 * .frame .center .land {
   fill: #2196F3;
 }
@@ -103,9 +103,9 @@
   justify-content: space-between;
   transform: rotateY(-90deg);
   opacity: 0;
-  transform-style: preserve-3d;
+  /* transform-style: preserve-3d; */
   transition: transform 0.25s linear, opacity 0.25s linear;
-  animation: unhide 0.25s linear forwards;
+  /* animation: unhide 0.25s linear forwards; */
 }
 @keyframes unhide {
   0%, 99% {
